--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-Flask==2.0.1
-Flask-SocketIO==5.1.1
-requests==2.26.0
-python-socketio==5.3.
+Flask>=2.3.0
+Werkzeug>=3.0.0
+Flask-SocketIO>=5.3.0
+requests>=2.31.0
+python-socketio>=5.11.0
+eventlet>=0.35.0
