--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-Flask>=2.3.0
-Werkzeug>=3.0.0
-Flask-SocketIO>=5.3.0
-requests>=2.31.0
-python-socketio>=5.11.0
-eventlet>=0.35.0
+Flask==2.0.1
+Flask-SocketIO==5.1.1
+python-socketio==5.3.0
+requests==2.26.0
+python-dotenv==0.19.0
+gunicorn==20.1.0
